--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
 Autor: Edgar M. Amezquita
-descripcion: Presentado al todo poderoso root
+descripcion: Presentado al root
 Este es mi proyecto de Linux para Ingeniería.
 
